Build: update ocamlformat to 0.24.1 Cherry-picked from 093a9abebf5575a60cd021c5611f0c275b697cbe.

--- a/opam/tezos-tooling.opam
+++ b/opam/tezos-tooling.opam
@@ -10,6 +10,7 @@ license: "MIT"
 depends: [
   "dune" { >= "3.0" }
   "bisect_ppx" { >= "2.7.0" }
+  "ocamlformat" { = "0.24.1" }
   "ometrics" { >= "0.2.1" }
   "base-unix"
 ]
