--- a/opam/virtual/octez-deps.opam
+++ b/opam/virtual/octez-deps.opam
@@ -25,7 +25,7 @@ depends: [
   "caqti-lwt"
   "class_group_vdf" { >= "0.0.4" }
   "cmdliner" { >= "1.1.0" }
-  "cohttp-lwt-unix" { >= "4.0.0" }
+  "cohttp-lwt-unix" { >= "4.0.0" & < "6" }
   "conf-libev"
   "conf-rust"
   "ctypes" { >= "0.18.0" }
@@ -56,7 +56,6 @@ depends: [
   "mtime" { >= "1.4.0" & < "2.0.0" }
   "num"
   "ocaml-migrate-parsetree"
-  "ocamlformat" { = "0.21.0" }
   "ocamlgraph"
   "ocp-ocamlres" { >= "0.4" }
   "ocplib-endian"
